@@ -1,3 +1,8 @@
+2017-08-08  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/81607
+	* g++.dg/other/bitfield6.C: New test.
+
 2017-08-07  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/81593
